# hanke-radar

./: .dockerignore  .gitignore  Dockerfile  PRD.md  STACK.md  pyproject.toml  render.yaml
.github/workflows/: scrape.yml
hanke_radar/: config.py
hanke_radar/api/: app.py  routes.py
hanke_radar/cli/: main.py
hanke_radar/db/: engine.py  models.py  seed.py
hanke_radar/scraper/: bulk_scraper.py  cpv_filter.py  html_enricher.py  xml_parser.py
tests/: test_api.py  test_cpv_filter.py  test_enricher.py  test_xml_parser.py
