[project]
name = "hanke-radar"
version = "0.1.0"
description = "Estonian public procurement scraper & feed service for tradespeople"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "sqlalchemy>=2.0.46",
    "typer>=0.24.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
hanke = "hanke_radar.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
